# exp-agent-management

./: .gitignore  .mcp.json  AGENTS.md  Cargo.toml  README.md  local-build.sh  package-lock.json  package.json  pnpm-lock.yaml
.claude/agents/: explorer.md  implementer.md  planner.md  reviewer.md  task-organizer.md
.claude/rules/: development-process.md  security.md
.crew/: config.json.example
.github/workflows/: pre-release.yml
assets/scripts/: toast-notification.ps1
crates/db/: Cargo.toml
crates/deployment/: Cargo.toml
crates/executors/: Cargo.toml  default_mcp.json
crates/local-deployment/: Cargo.toml
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: engine.rs  lib.rs  models.rs  scheduler.rs  state_machine.rs
crates/remote/: Cargo.toml  README.md  docker-compose.yml
crates/review/: Cargo.toml
crates/server/: Cargo.toml  build.rs
crates/services/: Cargo.toml
crates/utils/: Cargo.toml
docs/: LICENSING-CHECK.md  LICENSING-FINAL-CHECK.md  LICENSING-SUMMARY.md  LICENSING.md  THIRD_PARTY_NOTICES.md  docs.json  frontend-licenses.json  getting-started.mdx  index.mdx  supported-coding-agents.mdx  troubleshooting.mdx
docs/agents/: amp.mdx  claude-code.mdx  cursor-cli.mdx  droid.mdx  gemini-cli.mdx  (+4 more)
frontend/: CLAUDE.md  index.html  package.json  tailwind.new.config.js  vite.config.ts
npx-cli/: README.md  package-lock.json  package.json
plans/: polished-percolating-kurzweil.md  spicy-crafting-galaxy.md  wild-stirring-spark.md
remote-frontend/: package.json
scripts/: git-add-force.sh  setup-dev-environment.js
shared/: types.ts
(+261 files in other folders)
